<resources>
    <string name="app_name">Kalbu</string>
    <string name="settings_parental_mode">Tėvų rėžimas</string>
    <string name="settings_about">Apie</string>
    <string name="settings_download_images">Parsisiųsti paveikslėlių</string>
    <string name="story_now">Dabar</string>
    <string name="story_then">Po to</string>

    <string name="create_card_hint">Korteles pavadinimas</string>
    <string name="create_category_hint">Kategorijos pavadinimas</string>
    <string name="create_card_button_cancel">Atšaukti</string>
    <string name="create_card_button_accept">Pateikti</string>

    <string name="delete_card_button_yes">Ištrinti</string>
    <string name="delete_card_question">Ar tikrai norite ištrinti?</string>

    <string name="single_card_image_desc">Kortelės nuotrauka</string>

    <string name="default_category_name" />
    <string name="parental_mode_name">parental_mode</string>
    <string name="card_selection_extra_intent">card_selection</string>

    <string name="category_already_exists_error">Tokia kategorija jau egzistuoja.</string>

    <string name="category_page_title">Kategorijos</string>

    <string name="select_source_dialog_title">Pasirinkite šaltinį</string>
    <string name="select_source_take_picture">Fotografuoti</string>
    <string name="select_source_from_galery_text">Pasirinkti iš galerijos</string>

    <string name="add_more_images_link">https://www.flaticon.com/</string>

    <string name="about_app_name">Programėlė Kalbu</string>
    <string name="about_about">Programėlę kūrė Augustas Mikulėnas.\n
Programėlė „Kalbu“ yra alternatyviosios komunikacijos PECS programėlė teikianti vartotojui visišką laisvę kurti, trinti ar kitaip tvarkyti korteles.\n
Ši sistema yra kurta bendradarbiaujant su VšĮ Vilniaus Universiteto ligoninės Santaros klinikų Vaiko raidos centro specialistais.</string>

    <string name="about_attribution_lt">Paleidžiant sistemą pirmą kartą atsirandančios kortelės yra paleidžiamos su paveiksliukais darytais „Freepik“ iš www.flaticon.com</string>
    <string name="about_attribution_en">On first launch cards are loaded with icons made by Freepik from www.flaticon.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
