<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="card"
            type="lt.autismus.singleUnits.SingleCategory" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background_inset">

        <TextView
            android:id="@+id/delete_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/delete_card_question_text_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/delete_card_question" />

        <include
            android:id="@+id/card_view"
            layout="@layout/item_single_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="@dimen/stories_card_width"
            android:layout_height="@dimen/stories_card_height" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/delete_card_negative_text_size"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:text="@string/create_card_button_cancel"
            app:layout_constraintEnd_toStartOf="@id/accept_button"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_card_button_yes"
            android:background="@drawable/positive_button_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>