<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="card"
            type="lt.autismus.singleUnits.SingleCard" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/single_card_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_padding">

        <ImageView
            android:id="@+id/card_iv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/single_card_image_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_no_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_text_hitbox"
            android:layout_width="@dimen/create_card_dialog_text_input_width"
            android:layout_height="@dimen/create_card_dialog_text_input_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_iv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/create_card_hint"
                android:text="@={card.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_card_button_cancel"
            app:layout_constraintEnd_toStartOf="@id/accept_button"
            app:layout_constraintTop_toBottomOf="@id/card_text_hitbox" />

        <Button
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_card_button_accept"
            app:layout_constraintEnd_toEndOf="@id/card_text_hitbox"
            app:layout_constraintTop_toBottomOf="@id/card_text_hitbox" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>